# uproot-mcp-server

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  docker.yml  docs.yml
docs/: .gitignore  TOOLS.md  USAGE.md  _sidebar.md  index.html
src/uproot_mcp_server/: __init__.py  analysis.py  jobs.py  sandbox.py  server.py
tests/: test_analysis.py  test_jobs.py  test_sandbox.py  test_server.py
tests/fixtures/: create_fixture.py  test_eic.root  test_eic_nested.root
